<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin2"
    android:background="@drawable/border_add"
    android:padding="@dimen/padding"
    tools:context="com.example.android.inventoryappstage2.ViewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/product_view"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/title"/>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_name" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_name_view_text"
                style="@style/ProductViewdetailStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ListItemLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_price" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_price_view_text"
                style="@style/ProductViewdetailStyle" />

            <TextView
                style="@style/CurrencyStyle"
                android:layout_marginLeft="@dimen/padding"
                android:text="@string/product_price_currency" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_quantity" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_quantity_view_text"
                style="@style/ProductViewdetailStyle" />

            <LinearLayout
                style="@style/ListItemLinearLayoutsection2"
                android:paddingLeft="@dimen/padding">

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/increase_button"
                        android:layout_width="@dimen/button_height"
                        android:layout_height="@dimen/button_height"
                        android:background="@color/colorAccent"
                        android:text="+"
                        android:textColor="@color/textIcons"
                        />
                </LinearLayout>

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/decrease_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@color/colorAccent"
                        android:text="-"
                        android:textColor="@color/textIcons" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_supplier_name" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                android:id="@+id/product_supplier_name_view_text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_height"
                android:paddingRight="@dimen/paddingRight" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <TextView
                style="@style/ProductViewTitleTextStyle"
                android:text="@string/product_supplier_phone_number" />
        </LinearLayout>

        <LinearLayout style="@style/ListItemLinearLayoutsection2">

            <LinearLayout style="@style/ActivityViewLinearLayoutsection1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_supplier_phone_number_view_text"
                        style="@style/ProductViewdetailStyle" />
                </LinearLayout>

                <LinearLayout style="@style/ListItemLinearLayoutsection2">

                    <Button
                        android:id="@+id/phone_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:background="@color/colorAccent"
                        android:drawableTop="@drawable/ic_action_phone"
                        android:focusable="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/ActivityViewLinearLayoutsection1"
        android:gravity="center">

        <Button
            android:id="@+id/delete_button"
            style="@style/ActivityViewButtonStyle"
            android:drawableLeft="@drawable/ic_action_delete"
            android:text="Delete" />
    </LinearLayout>
</LinearLayout>
